--- a/app/views/registrations/_form.haml
+++ b/app/views/registrations/_form.haml
@@ -1,18 +1,12 @@
 =form_for(@user, url: sign_up_path) do |f| 
 	
-	=f.label :first_name
+	=f.label :first_name, "First Name"
 	=f.text_field :first_name
 
-	=f.label :last_name
+	=f.label :last_name, "Last Name"
 	=f.text_field :last_name
 
-	=f.label :password
+	=f.label :password, "Password"
 	=f.password_field :password
 
-	=f.label :height
-	=f.text_field :height
-
-	=f.label :weight
-	=f.number_field :weight
-
-	=f.submit 'Sign Up'
+	=f.submit 'Register'
