--- a/app/views/registrations/_form.haml
+++ b/app/views/registrations/_form.haml
@@ -6,6 +6,9 @@
 	=f.label :last_name, "Last Name"
 	=f.text_field :last_name
 
+	=f.label :email, "Email"
+	=f.text_field :email
+
 	=f.label :password, "Password"
 	=f.password_field :password
 
