--- a/app/views/registrations/_form.haml
+++ b/app/views/registrations/_form.haml
@@ -1,3 +1,8 @@
+-if @user.errors.any?
+	- @user.errors.full_messages.each do |msg|
+		=msg
+		%br
+
 =form_for(@user, url: sign_up_path) do |f| 
 	
 	=f.label :first_name, "First Name"
