testing bootstrap. added containers and jumbotron.

--- a/app/views/welcome/index.haml
+++ b/app/views/welcome/index.haml
@@ -1,2 +1,4 @@
-%h1 Landing Page 
-=link_to 'Sign Up', sign_up_path
+.container
+  .jumbotron
+    %h1 Professional Bouldering Circuit
+    %a.btn.btn-default{:href => "/sign-up", :role => "button"} Sign Up
